2007-07-02  Inge Wallin  <inge@lysator.liu.se>

	Move MarbleControlBox into the library where it belongs.
	* src/MarbleControlBox.{h,cpp}: Move to src/lib
	* src/MarbleControlBox.ui: Move to src/lib and fix includes
	* src/katlascontrol.cpp: Fix includes
	* src/CMakeLists.txt: Fix include directories
	* src/lib/CMakeLists.txt: Fix include directories
	
2007-08-01  Murad Tagirov  <tmurad@gmail.com>

	Initial commit of kml-tasks file which is a list of tasks to be done
	* projects/kml/kml-tasks: new

2007-07-01  Inge Wallin  <inge@lysator.liu.se>

	* src/DESIGN: Improve documentation

2007-06-28  Andrew Manson   <g.real.ate@gmail.com>

    Added a new tab to MarbleControlBox, Gps Option, and setup method
    in MarbleControlBox.h/cpp. Also connected nessary signals for
    using GpsOption.
    *src/MarbleControlBox.{h,cpp} (setupGpsOption) : New Method

    Added accessors and setters in MarbleWidget for showing the
    Gps Layer
    *src/lib/MarbleWidget.{h,cpp} (showGps, setShowGps) : New Methods

    Fixed the constructor of AbstractLayer to include
    AbstractContainer and fixed the look. Also included bool value in
    Layer to mark if it is visible.
    *src/lib/AbstractLayer/AbstractLayer.{h,cpp} (m_showLayer):New

    Added nessary variables to MarbleModelPrivate for the gps layer
    * src/lib/MarbleModel.cpp (m_gpsLayer, m_showGps) : New Variables

    Added new file to take care of gps layer with a Waypoint to
    represent current position.
    * src/lib/gps/GpsLayer: new

2007-06-27  Inge Wallin  <inge@lysator.liu.se>

	Temporarily bring back the old paintPlaceFolder due to problems
	just before the tagging of KDE alpha2.
	* src/lib/placemarkpainter.{h,cpp} (paintPlaceFolder): Bring back
	the old version.
	* src/lib/placemark.{h,cpp}: Bring back old members

2007-06-26  Inge Wallin  <inge@lysator.liu.se>

	Break out search for label space.
	* src/lib/placemarkpainter.{h,cpp} (roomForLabel): new function